# unifac

./: .gitignore  LICENSE  Q.txt  R.txt  README.md  UFC_Data2.txt  UFC_Data_main.txt  config.txt  create_validation_files.py  group_flag_1.txt  group_flag_2.txt  group_flag_array.txt  group_stoich_1.txt  output.txt  pyproject.toml  unifac.py  unifac_i.cu  unifac_reader.py  v.txt  validate.py  x.txt
.github/workflows/: compile.yml  nvidia-smi.yml
model_parameters/: R.txt  UFC_Data_main.txt
src/: unifac_i.cu
src/tests/: conftest.py  test_loading_input_files.py  test_unifac_component.py  test_unifac_model_parameters.py
src/tests/expectations/: output_103666_83.txt  output_183_83.txt  output_2727_83.txt
src/tests/test_files/: group_stoich_2727_83.txt
src/tests/unifac-gpu/: test_prepare_data.py
src/unifac/: model.py  model_parameters.py
src/unifac/model_parameters/: Q.txt  UFC_Data2.txt
src/unifac_gpu/: prepare_data.py  utils.py
src/utils/: create_config.py  load_test_files.py
test_files/: group_flag_3.txt  group_stoich_3.txt
