[project]
name = "unifac"
version = "0.1.0"
description = "Python package for running UNIFAC model"
readme = "README.md"
authors = [
    { name = "simonruske" }
]
requires-python = ">=3.11"
dependencies = [
    "cuda-python[all]>=12.9.0",
    "numpy>=2.2.6",
    "pytest>=8.3.5",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
